# m-cli

./: .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CLAUDE.md  Makefile  Makefile.vista  README.md  TODO.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
docs/: README.md  audit-m-engine-2026-05-13.md  audit-remediation-plan0-2026-05-13.md  cli-menu-system.md  cli-output-audit-2026-05-13.md  cli-rebuild-proposal-2026-05-13.md  cli-schema-architecture-2026-05-13.md  evolution.md  guide.md  language-cli-survey.md  m-cli-history-and-evolution.md  m-cli-tdd-lifecycle-walkthrough.md  m-corpus-catalog.md  m-env-implementation-plan.md  m-environment-tool.md  m-linter-status-2026-04-30.md  m-linting-implementation-plan.md  m-linting-survey.md  m-linting-user-guide.md  m-tdd-lifecycle-walkthrough.md  plugin-development.md  pre-commit.md  vista-meta-bootstrap.md  worked-example-accsum.md
docs/cli-frameworks/: cli-python-frameworks.md  cli-ux-conventions-guide.md  cli-ux-plan.md
docs/plans/: iris-ydb-portability.md  language-cli-survey.md  linter-profiles-guide.md  m-cli-history-and-evolution.md  m-corpus-catalog.md  m-env-implementation-plan.md  m-environment-tool.md  m-linter-status-2026-04-30.md  m-linting-implementation-plan.md  m-linting-survey.md  phase-3-plan.md
docs/vista-lint-presets/: README.md  m-cli.toml.example
examples/vista-lint-presets/: m-cli.toml.example
scripts/: lint_bench.py  lint_modern.baseline.json  lint_modern.py  seed-vista.sh  setup_modern_corpus.sh  unseed-vista.sh  vista_canonical.py  vista_lint.py  vista_round_trip.py
src/m_cli/: __init__.py  __main__.py  _exit.py  _overview.py  cli.py  config.py  engine.py  engine_cli.py  engine_driver.py  engine_manifest.py  parser.py  plugins.py  stdlib_cli.py  workspace.py
src/m_cli/capabilities/: __init__.py  cli.py
src/m_cli/ci/: __init__.py  cli.py  scaffold.py
src/m_cli/coverage/: __init__.py  branches.py  cli.py  output.py  runner.py
src/m_cli/doc/: __init__.py  cli.py  errors.py  examples.py  extract.py  format.py  list_modules.py  lookup.py  manifest.py  render.py  search.py
src/m_cli/doctor/: __init__.py  _runtime.py  checks.py  cli.py
src/m_cli/fmt/: __init__.py  cli.py  formatter.py  list_rules.py  rules.py
src/m_cli/lint/: __init__.py  _directives.py  _doc.py  _index.py  _keywords.py  _modern.py  _vista_kernel.py  _vista_trusted.py  baseline.py  cli.py  context.py  diagnostic.py  fix.py  list_rules.py  output.py  profiles.py  rules.py  runner.py  thresholds.py
src/m_cli/lint/flow/: __init__.py  cfg.py  dollar_test.py  etrap_state.py  lock_state.py  reaching.py  taint.py  transaction_state.py  vars.py
src/m_cli/lsp/: __init__.py  cli.py  convert.py  server.py  structure.py  symbols.py
src/m_cli/new/: __init__.py  cli.py  scaffold.py
src/m_cli/run/: __init__.py  cli.py  runner.py
src/m_cli/test/: __init__.py  changed.py  cli.py  discovery.py  output.py  runner.py
src/m_cli/watch/: __init__.py  affinity.py  cli.py  poller.py
tests/: conftest.py  test_build.py  test_capabilities.py  test_ci.py  test_cli_doc_lookup.py  test_cli_manifest_subcommands.py  test_cli_ux_contract.py  test_config.py  test_coverage_branches.py  test_coverage_branches_integration.py  test_coverage_cli.py  test_coverage_output.py  test_coverage_runner.py  test_doc.py  test_doc_list_modules.py  test_doctor.py  test_engine.py  test_engine_cli.py  test_engine_driver.py  test_engine_manifest.py  test_engine_transports.py  test_fmt_list_rules.py  test_fmt_rules.py  test_fmt_sac.py  test_formatter.py  test_library_api.py  test_lint_baseline.py  test_lint_context.py  test_lint_directives.py  test_lint_doc.py  test_lint_fix.py  test_lint_fixer_linkage.py  test_lint_flow_cfg.py  test_lint_flow_dollar_test.py  test_lint_flow_etrap_state.py  test_lint_flow_lock_state.py  test_lint_flow_reaching.py  test_lint_flow_taint.py  test_lint_flow_transaction_state.py  test_lint_flow_vars.py  (+40 more)
tests/fixtures/sac/: COMBO.pythonic-lower.m  COMBO.sac.m  DATALINES.both.m  HELLO.pythonic-lower.m  HELLO.sac.m  INTRINS.pythonic-lower.m  INTRINS.sac.m  SPECVAR.pythonic-lower.m  SPECVAR.sac.m
